objects/Correspondence__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Claim__r.Opportunity__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unternehmen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Text__c</fullName>
        <label>Freitext</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Berufungsbegruendung_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Berufungsbegründung erstellt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Berufungsschrift_erstellt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Berufungsschrift erstellt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim_Competent_Court__c</fullName>
        <formula>TEXT(Claim__r.Competent_Court__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Competent Court</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Legal_Id__c</fullName>
        <formula>Claim__r.Legal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Legal Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <label>Fall</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Korrespondenzen</relationshipLabel>
        <relationshipName>Correspondencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <formula>Claim__r.Opportunity__r.Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Old_Org__c</fullName>
        <label>Created Date Old Org</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Link_Ownership__c</fullName>
        <label>Versanddatum Rückfrage Eigentümerschaft</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Datum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Titel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Record_Type_Id__c</fullName>
        <formula>IF( RecordTypeId = '0120Y000000W0lw', '0121r000000d4b1',  IF( RecordTypeId = '0120Y000000W0nO', '0121r000000d4b2', IF( RecordTypeId = '0120Y000000W0u0', '0121r000000d4b3', IF( RecordTypeId = '0120Y000000RLxj', '0121r000000d4b6', IF( RecordTypeId = '0120Y000000KlQk', '0121r000000Ogxl', IF( RecordTypeId = '0120Y000000W0u5', '0121r000000d4b8', IF( RecordTypeId = '0120Y000000KlQl', '0121r000000Ogxw', IF( RecordTypeId = '0120Y000000W0u6', '0121r000000d4bA', IF( RecordTypeId = '0120Y000000KlQm', '0121r000000Ogy1', '')))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_up_Period__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Zeit bis Wiedervorlage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inform_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zur Kenntnisnahme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lawsuit_Type__c</fullName>
        <label>Klagemodell</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lawsuit_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Protection_Insurance_Case_Number__c</fullName>
        <formula>Claim__r.Legal_Protection_Insurance_Case_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schadensnummer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_Korrespondenz_ID__c</fullName>
        <label>Old Korrespondenz ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account_Id__c</fullName>
        <formula>Claim__r.Opportunity__r.Account_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Financing_Type__c</fullName>
        <formula>TEXT(Claim__r.Opportunity__r.Financing_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Financing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Claim__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Lawsuit_Type__c</fullName>
        <formula>TEXT(Claim__r.Opportunity__r.Lawsuit_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Klagemodell</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Legal_Account_Id__c</fullName>
        <formula>Claim__r.Opportunity_Legal_Account_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Legal Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Claim__r.Opportunity__r.Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bearbeitungsnummer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type_Id__c</fullName>
        <formula>Claim__r.Opportunity__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Sales_Type__c</fullName>
        <formula>TEXT(Claim__r.Opportunity__r.Sales_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Sales Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Vehicle_Brand_Id__c</fullName>
        <formula>Claim__r.Opportunity__r.Vehicle_Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Vehicle Brand Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Reference__c</fullName>
        <label>Zeichen des Partners</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Correspondence_Partners</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Correspondence_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_set_to_Sent__c</fullName>
        <label>Status set to "Sent"</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TaskController__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Controller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_1__c</fullName>
        <formula>Term__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term + 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Term__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Term__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Term__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Frist</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>Claim__r.Opportunity__r.Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Modules__c</fullName>
        <label>Textbausteine</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Text_Modules</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Typ</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Correspondence_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Brand_Reference__c</fullName>
        <formula>Claim__r.Vehicle_Brand_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fallzeichen des Fahrzeugherstellers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wiedervorlage_erstellen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wiedervorlage erstellen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>correspondenceLegalDocumentsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Klagedokumente vollständig</label>
        <type>Checkbox</type>
    </fields>
    <label>Korrespondenz</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Korrespondenzen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Correspondencies</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Claim__c</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Alle Korrespondenzen</label>
    </listViews>
    <listViews>
        <fullName>LV_Nicht_versendete_DA_Klage</fullName>
        <columns>Claim__c</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Date__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Deckungsanfrage für Klage</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Record_Type_Id__c</field>
            <operation>notEqual</operation>
            <value>Opportunity.Dieselskandal</value>
        </filters>
        <label>LV - Nicht versendete DA Klage</label>
        <sharedTo>
            <group>Jaeger</group>
            <group>Kainz</group>
            <group>Vortmann</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LV_Nicht_versendete_DA_WSP</fullName>
        <columns>Claim__c</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Date__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Deckungsanfrage für Widerspruch</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Record_Type_Id__c</field>
            <operation>notEqual</operation>
            <value>Opportunity.Dieselskandal</value>
        </filters>
        <label>LV - Nicht versendete DA WSP</label>
        <sharedTo>
            <group>Jaeger</group>
            <group>Kainz</group>
            <group>Vortmann</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LV_Nicht_versendete_Klage</fullName>
        <columns>Claim__c</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Date__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Klageschrift</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Record_Type_Id__c</field>
            <operation>notEqual</operation>
            <value>Opportunity.Dieselskandal</value>
        </filters>
        <label>LV - Nicht versendete Klage</label>
        <sharedTo>
            <group>Jaeger</group>
            <group>Kainz</group>
            <group>Vortmann</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Nicht_vers_Deckungsanfr_f_r_Anspr</fullName>
        <columns>NAME</columns>
        <columns>Claim__c</columns>
        <columns>Date__c</columns>
        <columns>Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Deckungsanfrage für Anspruchsschreiben</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Record_Type_Id__c</field>
            <operation>equals</operation>
            <value>Opportunity.Dieselskandal</value>
        </filters>
        <label>*Nicht vers. Deckungsanfr. für Anspr.</label>
        <sharedTo>
            <group>H_Jaeger</group>
            <group>Lachmair</group>
            <group>Lachmair_Accounting</group>
            <group>Lachmair_Admin</group>
            <group>VH24_Diesel</group>
            <group>VR24_Diesel</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Nicht_vers_Deckungsanfr_f_r_Klage</fullName>
        <columns>NAME</columns>
        <columns>Claim__c</columns>
        <columns>Date__c</columns>
        <columns>Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Deckungsanfrage für Klage</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Record_Type_Id__c</field>
            <operation>equals</operation>
            <value>Opportunity.Dieselskandal</value>
        </filters>
        <label>*Nicht vers. Deckungsanfr. für Klage</label>
        <sharedTo>
            <group>H_Jaeger</group>
            <group>Lachmair</group>
            <group>Lachmair_Accounting</group>
            <group>Lachmair_Admin</group>
            <group>VH24_Diesel</group>
            <group>VR24_Diesel</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Nicht_versendete_Anspruchsschreiben</fullName>
        <columns>Claim__c</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Type__c</columns>
        <columns>Date__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Widerspruch durch Anwalt</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Record_Type_Id__c</field>
            <operation>notEqual</operation>
            <value>Opportunity.Dieselskandal</value>
        </filters>
        <label>LV - Nicht versendete RA WSP</label>
        <sharedTo>
            <group>Jaeger</group>
            <group>Kainz</group>
            <group>Vortmann</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Nicht_versendete_Anspruchsschreiben2</fullName>
        <columns>NAME</columns>
        <columns>Claim__c</columns>
        <columns>Date__c</columns>
        <columns>Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Anspruchsschreiben</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Record_Type_Id__c</field>
            <operation>equals</operation>
            <value>Opportunity.Dieselskandal</value>
        </filters>
        <label>*Nicht versendete Anspruchsschreiben</label>
        <sharedTo>
            <group>H_Jaeger</group>
            <group>Lachmair</group>
            <group>Lachmair_Accounting</group>
            <group>Lachmair_Admin</group>
            <group>VH24_Diesel</group>
            <group>VR24_Diesel</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Nicht_versendete_Klageschriften</fullName>
        <columns>NAME</columns>
        <columns>Claim__c</columns>
        <columns>Date__c</columns>
        <columns>Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Klageschrift</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Record_Type_Id__c</field>
            <operation>equals</operation>
            <value>Opportunity.Dieselskandal</value>
        </filters>
        <label>*Nicht versendete Klageschriften</label>
        <sharedTo>
            <group>H_Jaeger</group>
            <group>Lachmair</group>
            <group>Lachmair_Accounting</group>
            <group>Lachmair_Admin</group>
            <group>VH24_Diesel</group>
            <group>VR24_Diesel</group>
            <role>Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Versendete_Anspruchsschreiben</fullName>
        <columns>NAME</columns>
        <columns>Claim__c</columns>
        <columns>Date__c</columns>
        <columns>Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Anspruchsschreiben</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Record_Type_Id__c</field>
            <operation>equals</operation>
            <value>Opportunity.Dieselskandal</value>
        </filters>
        <label>*Versendete Anspruchsschreiben</label>
        <sharedTo>
            <group>H_Jaeger</group>
            <group>Lachmair</group>
            <group>Lachmair_Accounting</group>
            <group>Lachmair_Admin</group>
            <group>VH24_Diesel</group>
            <group>VR24_Diesel</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Versendete_Deckungsanfragen_f_r_Anspr</fullName>
        <columns>NAME</columns>
        <columns>Claim__c</columns>
        <columns>Date__c</columns>
        <columns>Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Deckungsanfrage für Anspruchsschreiben</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Record_Type_Id__c</field>
            <operation>equals</operation>
            <value>Opportunity.Dieselskandal</value>
        </filters>
        <label>*Versendete Deckungsanfragen für Anspr.</label>
        <sharedTo>
            <group>H_Jaeger</group>
            <group>Lachmair</group>
            <group>Lachmair_Accounting</group>
            <group>Lachmair_Admin</group>
            <group>VH24_Diesel</group>
            <group>VR24_Diesel</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Versendete_Deckungsanfragen_f_r_Klage</fullName>
        <columns>NAME</columns>
        <columns>Claim__c</columns>
        <columns>Date__c</columns>
        <columns>Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Deckungsanfrage für Klage</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Record_Type_Id__c</field>
            <operation>equals</operation>
            <value>Opportunity.Dieselskandal</value>
        </filters>
        <label>*Versendete Deckungsanfragen für Klage</label>
        <sharedTo>
            <group>H_Jaeger</group>
            <group>Lachmair</group>
            <group>Lachmair_Accounting</group>
            <group>Lachmair_Admin</group>
            <group>VH24_Diesel</group>
            <group>VR24_Diesel</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Versendete_Klageschriften</fullName>
        <columns>NAME</columns>
        <columns>Claim__c</columns>
        <columns>Date__c</columns>
        <columns>Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Klageschrift</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Record_Type_Id__c</field>
            <operation>equals</operation>
            <value>Opportunity.Dieselskandal</value>
        </filters>
        <label>*Versendete Klageschriften</label>
        <sharedTo>
            <group>H_Jaeger</group>
            <group>Lachmair</group>
            <group>Lachmair_Accounting</group>
            <group>Lachmair_Admin</group>
            <group>VH24_Diesel</group>
            <group>VR24_Diesel</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Anspruchsschreiben_Dieselskandal</fullName>
        <active>true</active>
        <label>Anspruchsschreiben (Dieselskandal)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deckungsanfrage_fuer_Anspruchsschreiben_Dieselskandal</fullName>
        <active>true</active>
        <label>Deckungsanfrage für Anspruchsschreiben (Dieselskandal)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deckungsanfrage_fuer_Berufung_Dieselskandal</fullName>
        <active>true</active>
        <label>Deckungsanfrage für Berufung (Dieselskandal)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deckungsanfrage_fuer_Berufung_Finanzierung</fullName>
        <active>true</active>
        <label>Deckungsanfrage für Berufung (Finanzierung)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deckungsanfrage_fuer_Berufung_Lebensversicherung</fullName>
        <active>true</active>
        <label>Deckungsanfrage für Berufung (Lebensversicherung)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deckungsanfrage_fuer_Klage_Dieselskandal</fullName>
        <active>true</active>
        <label>Deckungsanfrage für Klage (Dieselskandal)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deckungsanfrage_fuer_Klage_Finanzierung</fullName>
        <active>true</active>
        <label>Deckungsanfrage für Klage (Finanzierung)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deckungsanfrage_fuer_Klage_Lebensversicherung</fullName>
        <active>true</active>
        <label>Deckungsanfrage für Klage (Lebensversicherung)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deckungsanfrage_fuer_Widerspruch_Finanzierung</fullName>
        <active>true</active>
        <label>Deckungsanfrage für Widerspruch (Finanzierung)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deckungsanfrage_fuer_Widerspruch_Lebensversicherung</fullName>
        <active>true</active>
        <label>Deckungsanfrage für Widerspruch (Lebensversicherung)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Eingehend_Dieselskandal</fullName>
        <active>true</active>
        <label>Eingehend (Dieselskandal)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Eingehend_Finanzierung</fullName>
        <active>true</active>
        <label>Eingehend (Finanzierung)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Eingehend_Lebensversicherung</fullName>
        <active>true</active>
        <label>Eingehend (Lebensversicherung)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gerichtskostenrechnung_Dieselskandal</fullName>
        <active>true</active>
        <label>Gerichtskostenrechnung (Dieselskandal)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Klageschrift_Dieselskandal</fullName>
        <active>true</active>
        <label>Klageschrift (Dieselskandal)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Klageschrift_Finanzierung</fullName>
        <active>true</active>
        <label>Klageschrift (Finanzierung)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Klageschrift_Lebensversicherung</fullName>
        <active>true</active>
        <label>Klageschrift (Lebensversicherung)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Replik_Dieselskandal</fullName>
        <active>true</active>
        <label>Replik (Dieselskandal)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Replik_Lebensversicherung</fullName>
        <active>true</active>
        <label>Replik (Lebensversicherung)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sonstiges_Dieselskandal</fullName>
        <active>true</active>
        <label>Sonstiges (Dieselskandal)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sonstiges_Finanzierung</fullName>
        <active>true</active>
        <label>Sonstiges (Finanzierung)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sonstiges_Lebensversicherung</fullName>
        <active>true</active>
        <label>Sonstiges (Lebensversicherung)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vollmacht_141_ZPO_Dieselskandal</fullName>
        <active>true</active>
        <label>Vollmacht §141 ZPO (Dieselskandal)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Widerspruch_durch_Anwalt_Finanzierung</fullName>
        <active>true</active>
        <label>Widerspruch durch Anwalt (Finanzierung)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Widerspruch_durch_Anwalt_Lebensversicherung</fullName>
        <active>true</active>
        <label>Widerspruch durch Anwalt (Lebensversicherung)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Widerspruch_durch_Kunden_Finanzierung</fullName>
        <active>true</active>
        <label>Widerspruch durch Kunden (Finanzierung)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Widerspruch_durch_Kunden_Lebensversicherung</fullName>
        <active>true</active>
        <label>Widerspruch durch Kunden (Lebensversicherung)</label>
    </recordTypes>
</CustomObject>